# office-planner

./: .gitignore  README.md  pyproject.toml
office-planner-ui/: .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
office-planner-ui/.next-stale-20260317-223303/: trace
office-planner-ui/.next-stale-20260317-223303/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
office-planner-ui/.next-stale-20260317-223303/server/app/: page.js  page_client-reference-manifest.js
office-planner-ui/.next-stale-20260317-223303/server/vendor-chunks/: @swc.js  next.js
office-planner-ui/.next-stale-20260317-223303/static/chunks/: app-pages-internals.js  webpack.js
office-planner-ui/.next-stale-20260317-223303/static/webpack/: webpack.055d00eb44878325.hot-update.js
office-planner-ui/.next-stale-20260317-223303/types/app/: layout.ts  page.ts
office-planner-ui/app/: globals.css  layout.tsx  page.tsx
office-planner-ui/app/api/plan/: route.ts
office-planner-ui/lib/: planner.ts  types.ts
office-planner-ui/public/templates/: benches.csv  preallocations.csv  teams.csv
src/asterix_viz/: cat021.py  cat062.py  cat062_encode.py  ingest.py  main.py  models.py  opensky.py  parser.py  replay.py  roe.py  samples.py  store.py
src/asterix_viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/asterix_viz/data/: replay_demo.hex
src/asterix_viz/static/: app.js  index.html  styles.css
tools/: send_replay_udp.py
(+30 files in other folders)
